Update README and settings file

--- a/settings.json
+++ b/settings.json
@@ -1,22 +1,28 @@
 {
-    "python.envFile": ${workspaceFolder},
+    "python.envFile": "${workspaceFolder}",
+    "python.languageServer": "Pylance",
+    "python.testing.pytestEnabled": true,
     "python.linting.enabled": true,
+    "python.linting.flake8Enabled": true,
+    "python.linting.flake8Args": [
+        "--max-line-length=88",
+        "--ignore=E203"
+    ],
     "python.formatting.provider": "black",
     "python.formatting.blackArgs": [
-        "--max-line-length = 88",
-        "--extend-ignore=E203"
+        "--line-length",
+        "88"
     ],
-    "python.linting.flake8Enabled": true,
     "python.sortImports.args": [
         "--profile=black"
     ],
-    "python.languageServer": "Pylance",
-    "python.analysis.typeCheckingMode": "basic",
-    "python.venvPath": "~/.virtualenvs",
-    "editor.formatOnSave": true,
-    "editor.formatOnPaste": true,
-    "editor.codeActionsOnSave": {
-        "source.organizeImports": true,
+    "[python]": {
+        "editor.formatOnPaste": false,
+        "editor.formatOnSave": true,
+        "editor.formatOnSaveMode": "file",
+        "editor.codeActionsOnSave": {
+            "source.organizeImports": true,
+        },
     },
     "jupyter.notebookFileRoot": "${workspaceFolder}",
     "jupyter.sendSelectionToInteractiveWindow": true,
@@ -25,5 +31,5 @@
         "%load_ext autoreload",
         "%autoreload 2"
     ],
-    "jupyter.changeDirOnImportExport": true,
+    "jupyter.changeDirOnImportExport": true
 }
